<resources>
    <string name="app_name">Helpful Hints</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_subject">Add Subject</string>
    <string name="subject_name">Subject Name</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="subjects">Subjects</string>
    <string name="interval">Interval</string>
    <string name="notif_interval">Notification Interval</string>
    <string name="interval_explanation">Set the number of minutes you would like between each notification</string>
    <string name="confirm">Confirm</string>
</resources>
